test/tests/compiler/1_int_constants/invalid_parse/invalid_function_name.plx
# A function name must be an identifier, not a constant
pub 3 (none) i32 {
    return 0
}
